<resources>
    <string name="app_name">Sharq</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_display_menu">Menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="name_list">Name List</string>
    <string name="follow_up_list">Follow Up List</string>
    <string name="view_success_chart">View Success Chart</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="dialog_message">Welcome</string>
    <string name="title_activity_goals">Goals</string>
    <string name="title_activity_blue_print">BluePrint</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="new_user">New user</string>
    <string name="goal">Goal</string>
    <string name="title_activity_name_list">Name List</string>
    <string name="title_activity_followup">Follow up List</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="status">
        <item>Achieved</item>
        <item>Pending</item>
    </string-array>
    <string-array name="category">
        <item>A+</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
    </string-array>

    <string-array name="ccy">
        <item>INR</item>
        <item>USD</item>
    </string-array>

    <string-array name="rank">
        <item>Bronze</item>
        <item>Silver</item>
        <item>Gold</item>
        <item>Platinum</item>
        <item>Diamond</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="filter">Filter</string>
    <string name="add">Add New Record</string>
    <string name="by_star">By Star</string>
    <string name="by_location">By Location</string>
    <string name="by_color">By Color</string>
    <string name="by_category">By Category</string>
    <string name="show_all">Show All</string>
    <string name="title_activity_manipulate_namelist">ManipulateNamelistActivity</string>
    <string name="star">Give star or not</string>
    <string name="follow">Copy to Follow Up List</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="id">S.No.</string>
    <string name="name">Name</string>
    <string name="sno">S.No.</string>
    <string name="location">Location</string>
    <string name="cat">Cat</string>
    <string name="contact">Contact</string>
    <string name="st">*</string>
    <string name="sts_prompt">Enter status</string>
    <string name="cat_prompt">Enter category</string>
    <string name="ccy_prompt">Select Currency</string>
    <string name="rank_prompt">Select Rank</string>
    <string name= "adat">"Enter achieving date"</string>
    <string name= "ddl">"Enter deadline"</string>
    <string name= "amt">"Enter amount"</string>
    <string name= "goal_prompt">"Enter your goal"</string>
    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <string name="title_text">Google Sign-In</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>


</resources>
