<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/filter"
        android:orderInCategory="100"
        android:title="@string/filter"
        app:showAsAction="never">
    <menu>
        <group>
            <item android:id="@+id/by_star"
                android:title="@string/by_star"
                android:orderInCategory="100" />

            <item android:id="@+id/by_location"
                android:title="@string/by_location"
                android:orderInCategory="100" />

            <item android:id="@+id/by_color"
                android:title="@string/by_color"
                android:orderInCategory="100">
                <menu>
                  <group>
                    <item android:id="@+id/green"
                        android:icon="@drawable/green"
                        android:title="By Green"
                        android:orderInCategory="100" />
                    <item android:id="@+id/yellow"
                        android:icon="@drawable/yellow"
                        android:title="By Yellow"
                        android:orderInCategory="100" />
                    <item android:id="@+id/red"
                        android:icon="@drawable/red"
                        android:title="By Red"
                        android:orderInCategory="100" />
                  </group>
                </menu>
            </item>
            <item android:id="@+id/by_category"
                android:title="@string/by_category"
                android:orderInCategory="100" />
            <item android:id="@+id/show_all"
                android:title="@string/show_all"
                android:orderInCategory="100" />

        </group>
    </menu>
    </item>
        />
    // app:showAsAction="never"/>
    <item
        android:id="@+id/add"
        android:orderInCategory="100"
        android:title="@string/add"
        app:showAsAction="never"
        />

</menu>